--- a/Animation/style.css
+++ b/Animation/style.css
@@ -62,3 +62,18 @@ animation:0.5s flipInX ease;
     opacity: 0;
   }
 }
+
+@keyframes slidein {
+  from {
+    margin-left:100%;
+    width: 300%;
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
+.content {
+animation: 3s slidein;
+}
